# AWS-Region-Finder

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  index.js  package-lock.json  package.json  wrangler.toml  wrangler.toml.example
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: lib.rs
