[package]
edition = "2021"
name = "aws-region-finder-wasm"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
worker = "0.0.11"

ipnet = "2.5.0"
iprange = "0.6.7"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
uuid = {version = "1", features = ["serde", "v4", "fast-rng", "macro-diagnostics", "js"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
