[package]
edition = "2021"
name = "aws-region-finder-wasm"
version = "0.3.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1"
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1" }
http = "1"

ipnet = "2.11"
iprange = "0.6"
lazy_static = "1.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
uuid = {version = "1", features = ["serde", "v4", "fast-rng", "macro-diagnostics", "js"]}
